<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/mainScreen"
            android:title="@string/main_screen"
            android:icon="@drawable/mainscreen_icon"/>
        <item
            android:id="@+id/profile"
            android:title="@string/profile_screen"
            android:icon="@drawable/profile_icon"/>
        <item
            android:id="@+id/scenario"
            android:title="@string/scenario_screen"
            android:icon="@drawable/scenario_icon"/>
        <item
            android:id="@+id/settings"
            android:title="@string/settings_screen"
            android:icon="@drawable/settings_icon"/>
        <item
            android:id="@+id/logout"
            android:title="@string/logout"
            android:icon="@drawable/logout_icon"/>
    </group>
</menu>