<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".settings.Settings_screen"
    tools:openDrawer="start">

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        app:headerLayout="@layout/header"
        app:menu="@menu/main_menu" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/blue_bg">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="#00FFFFFF"
                android:minHeight="?attr/actionBarSize"
                android:theme="?attr/actionBarTheme"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:navigationIcon="@drawable/menu" />

            <ImageView
                android:id="@+id/settings_image"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:layout_marginStart="24dp"
                android:layout_marginTop="20dp"
                android:padding="5dp"
                app:layout_constraintEnd_toStartOf="@+id/settings_title"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/toolbar"
                app:srcCompat="@drawable/settings_icon" />

            <TextView
                android:id="@+id/settings_title"
                android:layout_width="0dp"
                android:layout_height="45dp"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/baloo"
                android:text="@string/settings_title"
                android:textSize="30sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/settings_image"
                app:layout_constraintTop_toBottomOf="@+id/toolbar" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/settings_add_user_btn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="50dp"
                android:visibility="invisible"
                android:text="Vytvoriť nového používateľa "
                android:textSize="13sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/settings_language_text" />

            <TextView
                android:id="@+id/settings_language_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="145dp"
                android:layout_marginEnd="6dp"
                android:text="@string/setting_language"
                android:textColor="#249FE2"
                android:textSize="16sp"
                app:layout_constraintEnd_toStartOf="@+id/settings_language_type"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/settings_language_type"
                android:layout_width="0dp"
                android:layout_height="25dp"
                android:layout_marginTop="145dp"
                android:layout_marginEnd="24dp"
                android:text="@string/settings_choosen_language"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/settings_language_text"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.drawerlayout.widget.DrawerLayout>