<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".profile.Profile_screen"
    tools:openDrawer="start">

        <com.google.android.material.navigation.NavigationView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/nav_view"
            app:headerLayout="@layout/header"
            app:menu="@menu/main_menu"
            android:layout_gravity="start"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/blue_bg">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#00FFFFFF"
                android:minHeight="?attr/actionBarSize"
                android:theme="?attr/actionBarTheme"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:navigationIcon="@drawable/menu" />

            <ImageView
                android:id="@+id/imageView7"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:layout_marginStart="24dp"
                android:layout_marginTop="20dp"
                android:padding="5dp"
                app:layout_constraintEnd_toStartOf="@+id/textView3"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/toolbar"
                app:srcCompat="@drawable/profile_icon" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="0dp"
                android:layout_height="45dp"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/baloo"
                android:text="@string/profile_title"
                android:textSize="30sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/imageView7"
                app:layout_constraintTop_toBottomOf="@+id/toolbar" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="horizontal">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/profileNameTag"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="145dp"
                android:text="@string/profile_username"
                android:textColor="#249FE2"
                android:textSize="16sp"
                app:layout_constraintBottom_toTopOf="@+id/profileHomeTag"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/profileName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="190dp"
                android:layout_marginTop="145dp"
                android:text=""
                android:background="@null"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/profileHomeTag"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="15dp"
                android:text="@string/profile_household"
                android:textColor="#249FE2"
                android:textSize="16sp"
                app:layout_constraintBottom_toTopOf="@+id/profileEmailTag"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/profileNameTag" />

            <EditText
                android:id="@+id/profileHome"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="190dp"
                android:layout_marginTop="15dp"
                android:text=""
                android:textSize="16sp"
                android:background="@null"
                app:layout_constraintBottom_toTopOf="@+id/profileEmail"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/profileName" />

            <TextView
                android:id="@+id/profileEmailTag"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="15dp"
                android:text="@string/profile_email"
                android:textColor="#249FE2"
                android:textSize="16sp"
                app:layout_constraintBottom_toTopOf="@+id/profilePassTag"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/profileHomeTag" />

            <EditText
                android:id="@+id/profileEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="190dp"
                android:layout_marginTop="15dp"
                android:background="@null"
                android:text=""
                android:textSize="16sp"
                app:layout_constraintBottom_toTopOf="@+id/profilePassword"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/profileHome" />

            <TextView
                android:id="@+id/profilePassTag"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="15dp"
                android:text="Heslo"
                android:textSize="16sp"
                android:textColor="#249FE2"
                app:layout_constraintBottom_toTopOf="@+id/profileRoleTag"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/profileEmailTag" />

            <EditText
                android:id="@+id/profilePassword"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="190dp"
                android:layout_marginTop="15dp"
                android:background="@null"
                android:ems="10"
                android:inputType="textPassword"
                android:text="sssss"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/profileEmail" />

            <TextView
                android:id="@+id/profileRoleTag"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="15dp"
                android:text="@string/profile_role"
                android:textColor="#249FE2"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/profilePassTag" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/profileOk"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:clickable="true"
                app:fabSize="mini"
                android:visibility="invisible"
                app:layout_constraintBottom_toTopOf="@+id/profileCancel"
                app:layout_constraintEnd_toEndOf="@+id/profileCancel"
                app:srcCompat="@drawable/okay"
                android:focusable="true" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/profileCancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:clickable="true"
                app:fabSize="mini"
                android:visibility="invisible"
                app:layout_constraintBottom_toTopOf="@+id/profileEdit"
                app:layout_constraintEnd_toEndOf="@+id/profileEdit"
                app:srcCompat="@drawable/cancel"
                android:focusable="true" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton

                android:id="@+id/profileEdit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|right"
                android:layout_margin="16dp"
                android:layout_marginEnd="84dp"
                android:layout_marginBottom="164dp"
                android:src="@drawable/edit_icon"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <Spinner
                android:id="@+id/profileRole"
                android:layout_width="200dp"
                android:layout_height="30dp"
                android:layout_marginStart="180dp"
                android:layout_marginTop="15dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/profilePassword" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>

<!--    <RelativeLayout-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="match_parent">-->

<!--        <androidx.coordinatorlayout.widget.CoordinatorLayout-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="match_parent">-->

<!--            &lt;!&ndash;            <com.google.android.material.floatingactionbutton.FloatingActionButton&ndash;&gt;-->
<!--            &lt;!&ndash;                android:id="@+id/editProfile"&ndash;&gt;-->
<!--            &lt;!&ndash;                android:layout_width="wrap_content"&ndash;&gt;-->
<!--            &lt;!&ndash;                android:layout_height="wrap_content"&ndash;&gt;-->
<!--            &lt;!&ndash;                android:layout_gravity="bottom|right"&ndash;&gt;-->
<!--            &lt;!&ndash;                android:layout_margin="16dp"&ndash;&gt;-->
<!--            &lt;!&ndash;                android:src="@drawable/edit_icon"/>&ndash;&gt;-->
<!--        </androidx.coordinatorlayout.widget.CoordinatorLayout>-->
<!--    </RelativeLayout>-->
</androidx.drawerlayout.widget.DrawerLayout>